fix: fixed bootstrap slider display bug
fix: scss lint fix

fix: reverted last commit

fix: fixed slider shifting on page load

fix: deleted not needed changes

fix: whitespace deleted

fix: reverted changes

fix: fixed Cumulative Layout Shift

--- a/src/scss/custom/components/_slider.scss
+++ b/src/scss/custom/components/_slider.scss
@@ -8,11 +8,6 @@ $component-name: carousel;
   & &-item {
     align-items: center;
     justify-content: center;
-    height: 100%;
-
-    &.active {
-      display: flex;
-    }
 
     img {
       width: 100%;
@@ -99,4 +94,5 @@ $component-name: carousel;
   & &-control-next {
     right: 3rem;
   }
+
 }
